# learn-opengl

./: CMakeLists.txt  CMakePresets.json  README.md
docs/: project_tree.txt
lib/glad/: CMakeLists.txt
src/1_getting_started/: CMakeLists.txt
src/1_getting_started/1_hello_window/: hello_window.cpp
src/chapter_1_getting_started/: CMakeLists.txt
src/chapter_1_getting_started/lesson_1_hello_window/: CMakeLists.txt  hello_window.cpp
src/chapter_1_getting_started/lesson_2_hello_triangle/: CMakeLists.txt  hello_triangle.cpp  hello_triangle_exercise_1.cpp  hello_triangle_exercise_2.cpp  hello_triangle_exercise_3.cpp  hello_triangle_indexed.cpp
src/chapter_1_getting_started/lesson_3_shaders/: CMakeLists.txt  shaders_interpolation.cpp  shaders_uniform.cpp
